--- a/src/app/profile-view/profile-view.component.html
+++ b/src/app/profile-view/profile-view.component.html
@@ -1,17 +1,5 @@
 <app-nav-bar></app-nav-bar>
 
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <title>Your Page Title</title>
-
-</head>
-
-
-
     <div class="profile-page">
         <div class="profile-container">
             <div class="info-container">
@@ -26,7 +14,7 @@
                     </div>
                     <mat-list>
                         <mat-list-item *ngFor="let movie of FavoriteMovies">
-                            <img matListItemAvatar src="{{ movie.imageURL }}" />
+                            <img matListItemAvatar src="{{ movie.imageUrl }}" />
                             <span matListItemTitle>{{ movie.Title }}</span>
                         </mat-list-item>
                     </mat-list>
@@ -70,4 +58,4 @@
     </div>
 
 
-</html>
+
