--- a/src/app/genre-card/genre-card.component.scss
+++ b/src/app/genre-card/genre-card.component.scss
@@ -4,10 +4,10 @@
 .card-container {
   /* Your existing styles */
 
-  
+
 
   mat-card-content h2 .similar-movies-text {
-    color: black; /* Set the color to black */
+    color: rgb(228, 217, 217); /* Set the color to black */
   }
 
 
