--- a/src/app/main-view/main-view.component.scss
+++ b/src/app/main-view/main-view.component.scss
@@ -28,7 +28,7 @@
 
 .movie-card img:hover {
     transform: scale(1.02);
-    border: rgba(0,0,0,.8) 5px solid;
+    border: rgba(67, 62, 62, 0.8) 5px solid;
 }
 
 .button-bar {
@@ -36,6 +36,6 @@
 }
 
 .button-bar mat-icon {
-    border: rgba(50,75,125,.1) 2px solid;
+    border: rgba(48, 99, 200, 0.1) 2px solid;
     font-size: .8;
 }
