--- a/src/app/movie-card/movie-card.component.scss
+++ b/src/app/movie-card/movie-card.component.scss
@@ -46,8 +46,8 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: rgb(74, 9, 9);
-    color: white;
+    background: rgb(94, 93, 93);
+    color: rgb(245, 239, 239);
     height: 250px;
 }
 
@@ -66,7 +66,7 @@ h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    
+
 }
 
 .similar-card img {
@@ -75,7 +75,7 @@ h1 {
     max-width: 100px;
     width: auto;
     height: auto;
-    border: rgba(0,0,0,.8) 5px solid;
+    border: rgba(41, 38, 38, 0.8) 5px solid;
     cursor: pointer;
     height: auto;
     transform: scale(1.0);
@@ -84,5 +84,5 @@ h1 {
 
 .similar-card img:hover {
     transform: scale(1.02);
-    border: rgba(0,0,0,.8) 5px solid;
+    border: rgba(44, 41, 41, 0.8) 5px solid;
 }
