--- a/src/app/nav-bar/nav-bar.component.scss
+++ b/src/app/nav-bar/nav-bar.component.scss
@@ -1,16 +1,15 @@
 .navbar {
     display: flex;
     justify-content: space-between;
-
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     z-index: 1000;
     background: rgb(11, 2, 41);
+    height: 75px;
 }
 
 .navButton {
     margin: 5px 5px;
 }
-
